feat : add password hash and login endpoint
