# docs/swagger.yaml
@@ -6,6 +6,16 @@ definitions:
     required:
     - email
     type: object
+  controllers.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   controllers.VerificationRequest:
     properties:
       code:
@@ -214,6 +224,44 @@ paths:
             additionalProperties: true
             type: object
       summary: Get a user by email
+      tags:
+      - users
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate user credentials
+      parameters:
+      - description: Email and Password
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User logged in successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid request data
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Login a user
       tags:
       - users
   /verify:
